--- a/styles/common.css
+++ b/styles/common.css
@@ -66,7 +66,7 @@ body {
 	height: 70px;
 	font-weight: 400;
 	background-color: var(--secondary-color);
-	border-bottom: var(--purple) 5px solid;
+	border-bottom: #17a2b7;
 }
 
 .navbar ul {
